Fix: Spacing between sections

--- a/css/sections/_events.scss
+++ b/css/sections/_events.scss
@@ -1,5 +1,6 @@
 .events {
   overflow-x: scroll;
+  margin-block-end: 2em;
   table {
     margin-block-start: 2em;
     width: 750px;
