--- a/css/sections/_latest-news.scss
+++ b/css/sections/_latest-news.scss
@@ -1,4 +1,5 @@
 .latest-news {
+  margin-block-end: 2em;
   a {
     color: $orange;
     text-decoration: none;
